Fix stretching error on images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -176,7 +176,6 @@ main p {
 #facilities img {
   width: 100%;
   height: auto;
-  max-height: 200px;
 }
 
 #facilities img + p {
